WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56846
Incorrect rendering of composited element with negative z-index child
https://bugs.webkit.org/show_bug.cgi?id=56846
Summary
Incorrect rendering of composited element with negative z-index child
Simon Fraser (smfr)
Reported
2011-03-22 11:04:52 PDT
Created
attachment 86480
[details]
Testcase The attached testcase shows a bug where the foreground layer is clipping incorrectly.
Attachments
Testcase
(1.17 KB, text/html)
2011-03-22 11:04 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(31.70 KB, patch)
2011-03-22 14:38 PDT
,
Simon Fraser (smfr)
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-03-22 14:38:18 PDT
Created
attachment 86509
[details]
Patch
Simon Fraser (smfr)
Comment 2
2011-03-22 16:18:00 PDT
Other platforms may want to pick up the setNeedsDisplay change in GraphicsLayerCA.
Simon Fraser (smfr)
Comment 3
2011-03-22 16:20:00 PDT
http://trac.webkit.org/changeset/81715
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug